[feat] - добавит студентов и группировку тестов в API
