# server/routes/admin.routes.js
@@ -6,6 +6,7 @@ import {
 } from '../middleware/auth.middleware.js'
 
 import { groupsRouter } from './groups.routes.js'
+import { studentsRouter } from './students.routes.js'
 import { subjectsRouter } from './subjects.routes.js'
 import { teachersRouter } from './teachers.routes.js'
 import { testsRouter } from './tests.routes.js'
@@ -17,6 +18,7 @@ adminRouter.use(authMiddleware, requireRole('admin'))
 
 adminRouter.use('/users', usersRouter)
 adminRouter.use('/groups', groupsRouter)
+adminRouter.use('/students', studentsRouter)
 adminRouter.use('/subjects', subjectsRouter)
 adminRouter.use('/teachers', teachersRouter)
 adminRouter.use('/tests', testsRouter)
